implemented remaining comments

--- a/bib/selection.bib
+++ b/bib/selection.bib
@@ -180,3 +180,26 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:1101.0538;%%",
 }
+
+@techreport{Sforza:1529999,
+      author        = "Sforza, F",
+      title         = "{MCP Mass Performance plots - Moriond 2013 dataset}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2013-340",
+      month         = "Mar",
+      year          = "2013",
+}
+
+@article{Aad:2014nim,
+      author         = "Aad, Georges and others",
+      title          = "{Electron and photon energy calibration with the ATLAS
+                        detector using LHC Run 1 data}",
+      collaboration  = "ATLAS Collaboration",
+      year           = "2014",
+      eprint         = "1407.5063",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-153",
+      SLACcitation   = "%%CITATION = ARXIV:1407.5063;%%",
+}
