implemented all comments

--- a/bib/simulation.bib
+++ b/bib/simulation.bib
@@ -172,3 +172,57 @@
       reportNumber   = "SLAC-PUB-9350, FERMILAB-PUB-03-339",
       SLACcitation   = "%%CITATION = NUIMA,A506,250;%%",
 }
+
+@article{Catani:2001cc,
+      author         = "Catani, S. and Krauss, F. and Kuhn, R. and Webber, B.R.",
+      title          = "{QCD matrix elements + parton showers}",
+      journal        = "JHEP",
+      volume         = "0111",
+      pages          = "063",
+      doi            = "10.1088/1126-6708/2001/11/063",
+      year           = "2001",
+      eprint         = "hep-ph/0109231",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-TH-2000-367, CAVENDISH-HEP-00-03",
+      SLACcitation   = "%%CITATION = HEP-PH/0109231;%%",
+}
+
+@article{Mangano:2006rw,
+      author         = "Mangano, Michelangelo L. and Moretti, Mauro and
+                        Piccinini, Fulvio and Treccani, Michele",
+      title          = "{Matching matrix elements and shower evolution for
+                        top-quark production in hadronic collisions}",
+      journal        = "JHEP",
+      volume         = "0701",
+      pages          = "013",
+      doi            = "10.1088/1126-6708/2007/01/013",
+      year           = "2007",
+      eprint         = "hep-ph/0611129",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2006-232, FNT-T-2006-09",
+      SLACcitation   = "%%CITATION = HEP-PH/0611129;%%",
+}
+
+@article{Catani:1991hj,
+      author         = "Catani, S. and Dokshitzer, Yuri L. and Olsson, M. and
+                        Turnock, G. and Webber, B.R.",
+      title          = "{New clustering algorithm for multi - jet cross-sections
+                        in e+ e- annihilation}",
+      journal        = "Phys.Lett.",
+      volume         = "B269",
+      pages          = "432-438",
+      doi            = "10.1016/0370-2693(91)90196-W",
+      year           = "1991",
+      reportNumber   = "CAVENDISH-HEP-91-5",
+      SLACcitation   = "%%CITATION = PHLTA,B269,432;%%",
+}
+
+@article{Calafiura:865624,
+      author        = "Calafiura, P and Lavrijsen, W and Leggett, C and Marino, M
+                       and Quarrie, D",
+      title         = "{The Athena Control Framework in Production, New
+                       Developments and Lessons Learned}",
+      year          = "2005",
+}
